apache version is working properly with similar results to direct TCP